<?xml version="1.0"?>
<package format="2">
  <name>flight_controller</name>
  <version>0.0.1</version>
  <description>Flight Controller Package</description>
  <maintainer email="muhammad.humais@ku.ac.ae">Muhammad Ahmed Humais</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>hear_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
   <depend>nodelet</depend>

  <export>
    <nodelet plugin="${prefix}/outer_sys_nodelet.xml" />
    <nodelet plugin="${prefix}/inner_sys_nodelet.xml" />
    <nodelet plugin="${prefix}/actuation_sys_nodelet.xml" />
    <nodelet plugin="${prefix}/opti_nodelet.xml" />
  </export>

</package>
