<?xml version="1.0"?>
<package format="2">
  <name>hear_flight_controller</name>
  <version>0.1.0</version>
  <description>HEAR Flight Controller Package</description>
  <maintainer email="muhammad.humais@ku.ac.ae">Muhammad Ahmed Humais</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>flight_controller</exec_depend>

  <export>
    <metapackage />
  </export>

</package>
